jwt util 수정